feat: Update configuration handling and improve presence tracking functionality

--- a/data/www/index.html
+++ b/data/www/index.html
@@ -236,18 +236,10 @@
 
                 <div class="card" style="margin-bottom: 1.5rem;">
                     <div class="card-header">
-                        <h3>Settings</h3>
-                        <span class="badge badge-warning" id="personStatusPage">Not Configured</span>
+                        <h3>Information</h3>
                     </div>
                     <div class="card-body">
-                        <div style="display: flex; align-items: center; gap: 0.5rem; margin-bottom: 1rem;">
-                            <label class="toggle-switch">
-                                <input type="checkbox" id="personEnabledPage" onchange="togglePersonTrackingPage()">
-                                <span class="toggle-slider"></span>
-                            </label>
-                            <span style="font-weight: 500;">Enable Home Assistant Person Tracking</span>
-                        </div>
-                        <p class="help-text" style="margin: 0;">Connect to Home Assistant to automatically track family members based on person entities.</p>
+                        <p class="help-text" style="margin: 0;">Presence tracking uses Home Assistant person entities. Add people below to start tracking.</p>
                     </div>
                 </div>
 
