--- a/data/www/index.html
+++ b/data/www/index.html
@@ -148,7 +148,7 @@
                     <!-- Calendar Widget -->
                     <div class="card">
                         <div class="card-header">
-                            <h3>📅 Upcoming</h3>
+                            <h3>Upcoming</h3>
                         </div>
                         <div class="card-body calendar-widget" id="calendarWidget">
                             <div class="calendar-loading">Loading calendar...</div>
@@ -434,7 +434,7 @@
 
                     <div class="card">
                         <div class="card-header">
-                            <h3>📅 Calendar</h3>
+                            <h3>Calendar</h3>
                             <span class="badge badge-warning" id="calendarStatus">Not Configured</span>
                         </div>
                         <div class="card-body">
@@ -492,11 +492,45 @@
                     <div class="card">
                         <div class="card-header">
                             <h3>MQTT Broker</h3>
-                            <span class="badge badge-success" id="mqttStatus">Connected</span>
+                            <span class="badge badge-warning" id="mqttStatus">Not Configured</span>
                         </div>
                         <div class="card-body">
-                            <p>Connected to MQTT broker for real-time communication.</p>
-                            <button class="btn btn-secondary">Configure</button>
+                            <div class="form-group">
+                                <label>
+                                    <input type="checkbox" id="mqttEnabled" onchange="toggleMqttSettings()"> Enable MQTT
+                                </label>
+                            </div>
+                            
+                            <div id="mqttSettings" style="display: none;">
+                                <div class="form-group">
+                                    <label>Broker Address</label>
+                                    <input type="text" id="mqttBroker" placeholder="192.168.1.100 or mqtt.example.com" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label>Port</label>
+                                    <input type="number" id="mqttPort" value="1883" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label>Username (optional)</label>
+                                    <input type="text" id="mqttUsername" placeholder="Leave empty if not required" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label>Password (optional)</label>
+                                    <input type="password" id="mqttPassword" placeholder="Leave empty if not required" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label>Client ID</label>
+                                    <input type="text" id="mqttClientId" placeholder="esp32-entry-hub" class="form-control">
+                                </div>
+                                <div class="form-group">
+                                    <label>Topic Prefix</label>
+                                    <input type="text" id="mqttTopicPrefix" placeholder="home/entry-hub" class="form-control">
+                                    <p class="help-text" style="margin-top: 0.25rem; font-size: 0.75rem;">Topics: {prefix}/status, {prefix}/command, {prefix}/presence</p>
+                                </div>
+                            </div>
+                            
+                            <button class="btn btn-primary" onclick="saveMqttSettings()">Save Settings</button>
+                            <button class="btn btn-secondary" onclick="testMqttConnection()" id="mqttTestBtn" style="display: none;">Test Connection</button>
                         </div>
                     </div>
                 </div>
