--- a/data/www/index.html
+++ b/data/www/index.html
@@ -121,7 +121,7 @@
                             <h3>Weather</h3>
                         </div>
                         <div class="card-body weather-widget">
-                            <div class="weather-icon">☀️</div>
+                            <div class="weather-icon">⋯</div>
                             <div class="weather-temp" id="weatherTemp">--°C</div>
                             <div class="weather-condition" id="weatherCondition">Loading...</div>
                         </div>
